// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Props should forward any CSS class 1`] = `
<ButtonRoot
  className="component component--is-tested"
  emphasis="high"
  size="m"
  theme="light"
  variant="button"
/>
`;

exports[`<Button> Props should use the given props for class names 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon lumx-button--has-right-icon"
  emphasis="high"
  size="m"
  theme="light"
  variant="button"
>
  <Icon
    icon="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
  />
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
  />
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render button with label 1`] = `
<ButtonRoot
  className=""
  emphasis="high"
  size="m"
  theme="light"
  variant="button"
>
  <span>
    Label
  </span>
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render button with label and icons 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon lumx-button--has-right-icon"
  emphasis="high"
  size="m"
  theme="light"
  variant="button"
>
  <Icon
    icon="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
  />
  <span>
    Label
  </span>
  <Icon
    icon="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
  />
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render button with label and left icon 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon"
  emphasis="high"
  size="m"
  theme="light"
  variant="button"
>
  <Icon
    icon="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
  />
  <span>
    Label
  </span>
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render button with label and right icon 1`] = `
<ButtonRoot
  className="lumx-button--has-right-icon"
  emphasis="high"
  size="m"
  theme="light"
  variant="button"
>
  <span>
    Label
  </span>
  <Icon
    icon="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
  />
</ButtonRoot>
`;
